renmaed files to match page numbers

--- a/basic_dfd-page16.html
+++ b/basic_dfd-page16.html
@@ -29,6 +29,13 @@ $('#click').on('click', function() {
 	});
 });
 
+/////another way of creating deferred
+function succeed (value) {
+	return $.Deferred(function(d){
+		d.resolve(value);
+	});
+}
+
 
 </script>
 
